Implement medium-priority error context and performance modeling improvements
Co-authored-by: c5473c4c <56372633+c5473c4c@users.noreply.github.com>